--- a/src/app/details-upload/details-upload.component.html
+++ b/src/app/details-upload/details-upload.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left: 10px;" *ngIf="(!fileUpload.name.endsWith('/') && fileUpload.name.startsWith(parent)) && (shared || fileUpload.name.split('/').length==level+1)">
     <div class="dropdown text-center">
         <div class="file">
-            <img src="../../assets/pictures/file2.jpg" style="width: 40px;height: 45px;"><br/>
+            <img src="../../assets/pictures/file.png" style="width: 40px;height: 45px;"><br/>
             <a href="{{fileUpload.url}}">{{fileUpload.name}}</a>
         </div>
         <div class="dropdown-content">
