--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         <p>“I don’t need a hard disk in my computer if I can get to the server faster , carrying around these non-connected computers is byzantine by comparison.” </p>
 
     </div>
-    <div class="centered1">
+    <div class="centered1" style="margin-top: 25px;">
 
         <p>~ Steve Jobs, Co-founder, CEO and Chairman of Apple Inc.</p>
     </div>
