--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,8 @@
 <header>
     <div class="container">
         <div class="logo-box">
-            <a href="/">
-                <img style="width:40px;height: 40px;" src="https://html5book.ru/wp-content/uploads/2015/01/logo-header.png">
+            <h4 style="margin-top:10px;color: white;float: left;">ℂ𝕃𝕠𝕦𝕕𝔻𝕣𝕚𝕧𝕖𝕟</h4>
 
-
-            </a>
             <div class="menuDiv">
                 <img class="menuIcon" style="width:50px;height:50px;" src="../../assets/pictures/588a64e0d06f6719692a2d10.png">
             </div>
