--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -2,9 +2,9 @@
     <div class="wrap-login text-center" style="padding : 30px 55px 30px 55px; ">
 
         <div>
-            <div id="up" style="display: inline-block;margin-right: 10px;" class="sign-methods__link" (click)="onSignUp()">SignUp</div>
+            <div id="up" style="text-decoration: underline;display: inline-block;margin-right: 10px;" class="sign-methods__link" (click)="onSignUp()">SignUp</div>
             <div style="display: inline-block;font-size: 50px;font-weight:200;margin-right: 10px;">|</div>
-            <div id="in" style="display: inline-block;font-size: 50px;" class="sign-methods__link" (click)="onSignIn()">SignIn</div>
+            <div id="in" style="text-decoration: underline;display: inline-block;font-size: 50px;" class="sign-methods__link" (click)="onSignIn()">SignIn</div>
         </div>
 
         <div style="height: 20px;"></div>
