--- a/src/app/chatbot/chatbot.component.html
+++ b/src/app/chatbot/chatbot.component.html
@@ -1,8 +1,49 @@
-<h1>Chat Bot</h1>
-<ng-container *ngFor="let message of messages">
-<div>
-{{message.sender}}: {{message.content}}
+<div style="height: 65px;"></div>
+<div class="container-fluid" style="height: 91%;width: 100%;">
+    <div class="row" style="height: 100%;">
+        <div class="col-sm-4 text-center" style="height: 100%;">
+            <p style="margin-top: 30px; font-size:35px;" class="text-center">🅲🅷🅰🆃🅱🅾🆃</p>
+            <p>𝙵𝚊𝚌𝚒𝚕𝚒𝚝𝚢 𝙱𝚢</p>
+            <p style="font-size: 25px;"> ℂ𝕝𝕠𝕦𝕕𝔻𝕣𝕚𝕍𝕖𝕟</p>
+
+            <img style="width: 350px;height: 400px;" src="../../assets/pictures/580b57fbd9996e24bc43bdfb.png">
+            <p>🅼🅴🅴🆃 🅲🅻🅾🆄🅳🆈</p>
+        </div>
+        <div id="chatBack" class="col-sm-8" style="height: 100%;overflow-y: scroll;">
+
+
+
+            <ng-container *ngFor="let message of messages">
+                <div *ngIf="message.sender=='Cloudy'">
+                    <div id="chatbox">
+                        <div id="chatmessages">
+
+                            <span style="font-size: 17px;font-weight: 600;color: #13263a;"> {{message.sender}}<br/></span> {{message.content}}
+                        </div>
+
+                    </div>
+                </div>
+                <div style="height: 10px;"></div>
+                <div *ngIf="message.sender=='User'">
+                    <div id="chatbox1">
+                        <div id="chatuser">
+                            {{message.content}}
+
+                        </div>
+                    </div>
+                </div>
+
+                <div style="height: 10px;"></div>
+            </ng-container>
+
+
+
+            <input id="askbox" [(ngModel)]="userInput" (keyup.enter)=postLexText placeholder="Type a Message">
+
+            <div style="height: 40px;"></div>
+
+        </div>
+
+        <button id="askbutton" title="Post Lex Text Button" (click)="postLexText()"><i style="width: 40px;height: 40px;" class="fas fa-arrow-alt-circle-right"></i> </button>
+    </div>
 </div>
-</ng-container>
-<input [(ngModel)]="userInput"(keyup.enter)=postLexText>
-<button title="Post Lex Text Button" (click)="postLexText()"> Post Text </button>
